--- a/.gitignore
+++ b/.gitignore
@@ -158,3 +158,9 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+myPass/.idea/vcs.xml
+myPass/.idea/myPass.iml
+myPass/.idea/modules.xml
+myPass/.idea/misc.xml
+myPass/.idea/inspectionProfiles/Project_Default.xml
+myPass/.idea/inspectionProfiles/profiles_settings.xml
